--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-# 设置user module是否独立运行
-isUserModule=true
+# 设置user module是否作为库运行
+isUserModule=fasle
