--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,11 @@ buildscript {
     // kotlin版本号
     ext.kotlin_version = '1.3.41'
     // anko版本号
-    ext.anko_version='0.10.8'
-
+    ext.anko_version = '0.10.8'
+    // rxkotlin版本号
+    ext.rx_kotlin_version = '1.0.0'
+    // rxandroid版本号
+    ext.rx_android_version = '1.2.1'
     repositories {
         google()
         jcenter()
