--- a/common/build.gradle
+++ b/common/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Anko Commons
     api "org.jetbrains.anko:anko-commons:$anko_version"
+    // rxkotlin
+    api "io.reactivex:rxkotlin:$rx_kotlin_version"
+    // rxandroid
+    api "io.reactivex:rxandroid:$rx_android_version"
 
     api'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
