--- a/user/build.gradle
+++ b/user/build.gradle
@@ -7,6 +7,9 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
+
 android {
     compileSdkVersion 28
 
@@ -38,6 +41,8 @@ android {
         }
     }
 
+
+
 }
 
 dependencies {
@@ -45,4 +50,6 @@ dependencies {
     api project(':provider')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
