--- a/user/src/main/debug/AndroidManifest.xml
+++ b/user/src/main/debug/AndroidManifest.xml
@@ -2,9 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.sukaidev.user">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:label="User"
+            android:name="com.sukaidev.common.common.BaseApplication"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.TestActivity">
