--- a/user/src/main/release/AndroidManifest.xml
+++ b/user/src/main/release/AndroidManifest.xml
@@ -6,5 +6,9 @@
             android:allowBackup="true"
             android:supportsRtl="true">
         <activity android:name=".ui.activity.RegisterActivity"/>
+        <activity android:name=".ui.activity.UserInfoActivity"/>
+        <activity android:name=".ui.activity.ForgetPwdActivity"/>
+        <activity android:name=".ui.activity.LoginActivity"/>
+        <activity android:name=".ui.activity.ResetPwdActivity"/>
     </application>
 </manifest>
