--- a/user/src/main/debug/AndroidManifest.xml
+++ b/user/src/main/debug/AndroidManifest.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sukaidev.user">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.sukaidev.user">
 
     <application
-            android:allowBackup="true"
-            android:networkSecurityConfig="@xml/network_security_config"
-            android:label="User"
-            android:name="com.sukaidev.common.common.BaseApplication"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.TestActivity">
-        </activity>
-        <activity android:name=".ui.activity.RegisterActivity">
+        android:name="com.sukaidev.common.common.BaseApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        android:fullBackupContent="@xml/backup_descriptor">
+        <activity android:name=".ui.activity.LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.RegisterActivity" />
+        <activity android:name=".ui.activity.ForgetPwdActivity" />
+        <activity android:name=".ui.activity.ResetPwdActivity" />
+        <activity android:name=".ui.activity.UserInfoActivity" />
     </application>
 
 </manifest>
