--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation 'androidx.core:core-ktx:1.0.2'
 
-    api project(':provider')
+    api project(':message')
     if (isUserModule.toBoolean()) {
         api project(':user')
     }
