--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
