用户页面UI视图开发.

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # 设置user module是否作为库运行
-isUserModule=fasle
+isUserModule=true
