商品分类页面二级列表开发.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 //    implementation 'androidx.core:core-ktx:1.0.2'
 
     api project(':message')
+    api project(':goods')
     if (isUserModule.toBoolean()) {
         api project(':user')
     }
