--- a/common/build.gradle
+++ b/common/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     api 'com.github.shts:TriangleLabelView:1.1.2'
     //
     api 'com.github.crosswall:Android-Coverflow:release-v1.0.5'
+    // RecyclerView相关
+    api  'com.github.Kennyc1012:MultiStateView:2.1'
 
     api 'androidx.appcompat:appcompat:1.0.2'
     api 'androidx.recyclerview:recyclerview:1.1.0-beta02'
