--- a/common/build.gradle
+++ b/common/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     api 'com.github.crosswall:Android-Coverflow:release-v1.0.5'
     // RecyclerView相关
     api  'com.github.Kennyc1012:MultiStateView:2.1'
+    // 下拉刷新
+    api  'cn.bingoogolapple:bga-refreshlayout:1.1.8@aar'
 
     api 'androidx.appcompat:appcompat:1.0.2'
     api 'androidx.recyclerview:recyclerview:1.1.0-beta02'
