--- a/common/build.gradle
+++ b/common/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.0.2'
     api 'androidx.recyclerview:recyclerview:1.1.0-beta02'
     api 'androidx.cardview:cardview:1.0.0'
+    api 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
