--- a/goods/src/main/AndroidManifest.xml
+++ b/goods/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.sukaidev.goods">
 
     <application>
-        <activity android:name=".ui.activity.GoodsActivity"/>
-        <activity android:name=".ui.activity.GoodsDetailActivity"/>
+        <activity android:name=".ui.activity.GoodsActivity" />
+        <activity android:name=".ui.activity.GoodsDetailActivity"  android:theme="@style/AppTheme.Black"/>
     </application>
 
 </manifest>
