--- a/common/build.gradle
+++ b/common/build.gradle
@@ -81,6 +81,8 @@ dependencies {
     api 'ren.qinc.numberbutton:numberbutton:0.0.1'
     // ARouter
     api "com.alibaba:arouter-api:$arouter_api_version"
+    // badge
+    api 'q.rorbin:badgeview:1.1.3'
 
     api 'androidx.appcompat:appcompat:1.0.2'
     api 'androidx.recyclerview:recyclerview:1.1.0-beta02'
