--- a/goods/src/main/AndroidManifest.xml
+++ b/goods/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <application>
         <activity android:name=".ui.activity.GoodsActivity" />
-        <activity android:name=".ui.activity.GoodsDetailActivity"  android:theme="@style/AppTheme.Black"/>
+        <activity
+            android:name=".ui.activity.GoodsDetailActivity"
+            android:theme="@style/AppTheme.Black" />
+        <activity android:name=".ui.activity.CartActivity" />
     </application>
 
 </manifest>
