订单数据适配.

--- a/goods/build.gradle
+++ b/goods/build.gradle
@@ -40,4 +40,8 @@ dependencies {
 
     api project(":provider")
     implementation 'androidx.fragment:fragment:1.2.0-alpha02'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
