--- a/order/src/main/AndroidManifest.xml
+++ b/order/src/main/AndroidManifest.xml
@@ -1,2 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sukaidev.order" />
+    package="com.sukaidev.order">
+
+    <application>
+        <activity android:name=".ui.activity.OrderConfirmActivity" />
+    </application>
+</manifest>
+
