收货地址管理页面实现.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
     api project(':message')
     api project(':goods')
+    api project(':order')
     if (isUserModule.toBoolean()) {
         api project(':user')
     }
