--- a/order/build.gradle
+++ b/order/build.gradle
@@ -37,8 +37,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    api fileTree(dir: 'libs', include: ['*.jar'])
     api project(':provider')
 
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
