--- a/order/src/main/AndroidManifest.xml
+++ b/order/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
 
     <application>
         <activity android:name=".ui.activity.OrderConfirmActivity" />
+        <activity android:name=".ui.activity.ShipAddressActivity" />
+        <activity android:name=".ui.activity.ShipAddressEditActivity" />
     </application>
 </manifest>
 
