接入支付宝支付.

--- a/message/build.gradle
+++ b/message/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 
     api project(':provider')
 
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.alibaba:arouter-compiler:$arouter_compiler_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
