--- a/order/build.gradle
+++ b/order/build.gradle
@@ -38,7 +38,7 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api project(':provider')
+    api project(':pay')
 
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler_version"
