--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+
+        flatDir {
+            dirs 'libs', '../pay/libs'
+        }
     }
 }
 
