--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME: applicationId
+        ]
     }
+
     buildTypes {
         release {
             minifyEnabled false
