--- a/message/src/main/AndroidManifest.xml
+++ b/message/src/main/AndroidManifest.xml
@@ -1,2 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sukaidev.message" />
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.sukaidev.message">
+
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
+
+        <meta-data
+            android:name="JPUSH_APPKEY"
+            android:value="{JPUSH_APPKEY}"
+            tools:replace="android:value" />
+        <meta-data
+            android:name="JPUSH_CHANNEL"
+            android:value="{JPUSH_CHANNEL}"
+            tools:replace="android:value" />
+
+    </application>
+
+</manifest>
