--- a/message/src/main/AndroidManifest.xml
+++ b/message/src/main/AndroidManifest.xml
@@ -1,22 +1,57 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sukaidev.message">
-
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+        <receiver
+            android:name=".receiver.MessageReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.REGISTRATION" />
+                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" />
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" />
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" />
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_CLICK_ACTION" />
+                <action android:name="cn.jpush.android.intent.CONNECTION" />
+
+                <category android:name="${JPUSH_PKGNAME}" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".jpush.JPushService"
+            android:enabled="true"
+            android:exported="false"
+            android:process=".pushcore">
+            <intent-filter>
+                <action android:name="cn.jiguang.user.service.action" />
+            </intent-filter>
+        </service>
+
+        <receiver
+            android:name=".jpush.JPushReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
+
+                <category android:name="${JPUSH_PKGNAME}" />
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="JPUSH_APPKEY"
-            android:value="{JPUSH_APPKEY}"
+            android:value="${JPUSH_APPKEY}"
             tools:replace="android:value" />
         <meta-data
             android:name="JPUSH_CHANNEL"
-            android:value="{JPUSH_CHANNEL}"
+            android:value="${JPUSH_CHANNEL}"
             tools:replace="android:value" />
-
     </application>
 
 </manifest>
