--- a/common/build.gradle
+++ b/common/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
+    // kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // Anko Commons
     api "org.jetbrains.anko:anko-commons:$anko_version"
@@ -75,7 +76,7 @@ dependencies {
     api  'cn.bingoogolapple:bga-refreshlayout:1.1.8@aar'
     // FlowLayout
     api 'com.hyman:flowlayout-lib:1.1.2'
-    // kotlin bus
+    // rx bus
     api 'com.eightbitlab:rxbus:1.0.2'
     // 商品加减控件
     api 'ren.qinc.numberbutton:numberbutton:0.0.1'
@@ -85,7 +86,7 @@ dependencies {
     api 'q.rorbin:badgeview:1.1.3'
 
     api 'androidx.appcompat:appcompat:1.0.2'
-    api 'androidx.recyclerview:recyclerview:1.1.0-beta02'
+    api 'androidx.recyclerview:recyclerview:1.1.0-beta03'
     api 'androidx.cardview:cardview:1.0.0'
     api 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
