--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 # 设置user module是否作为库运行
 isUserModule=true
-#
-isCoreModule=false
+# 设置core module是否作为库运行
+isCoreModule=true
 
 kapt.incremental.apt=true
