--- a/core/src/main/debug/AndroidManifest.xml
+++ b/core/src/main/debug/AndroidManifest.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.sukaidev.kotlinmall">
+    package="com.sukaidev.core">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
-        android:name=".common.MainApplication"
+        android:name=".common.BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".ui.activitiy.AboutActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:icon="@mipmap/ic_launcher">
         <activity
-            android:name=".ui.activitiy.MainActivity"
+            android:name="com.sukaidev.kotlinmall.ui.activitiy.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activitiy.SettingActivity" />
-        <activity
-            android:name=".ui.activitiy.SearchGoodsActivity"
-            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
