--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sukaidev.kotlinmall">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:name=".common.MainApplication"
         android:allowBackup="true"
@@ -13,7 +16,6 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".ui.activitiy.AboutActivity"></activity>
         <activity
             android:name=".ui.activitiy.MainActivity"
             android:windowSoftInputMode="adjustPan">
@@ -23,10 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activitiy.SettingActivity" />
+<!--        <activity android:name=".ui.activitiy.SettingActivity" />
         <activity
             android:name=".ui.activitiy.SearchGoodsActivity"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan" />-->
     </application>
 
 </manifest>
