--- a/core/build.gradle
+++ b/core/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     api "me.yokeyword:fragmentation-swipeback:$fragmentation_version"
     // RecyclerView
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
+    // RecyclerView分割线
+    api 'com.choices.divider:RecyclerView_Divider:1.0.0'
     // Retrofit
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
     api "com.squareup.okhttp3:okhttp:$ok_http_version"
@@ -104,6 +106,8 @@ dependencies {
     api 'ren.qinc.numberbutton:numberbutton:0.0.1'
     // badge
     api 'q.rorbin:badgeview:1.1.3'
+    // fastJson
+    api 'com.alibaba:fastjson:1.1.71.android'
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
