--- a/index/build.gradle
+++ b/index/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 
     api project(':core')
 
+    api 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
