--- a/index/src/main/AndroidManifest.xml
+++ b/index/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sukaidev.home" />
+    package="com.sukaidev.index" />
