--- a/pay/src/main/AndroidManifest.xml
+++ b/pay/src/main/AndroidManifest.xml
@@ -5,6 +5,6 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".ui.activity.CashRegisterActivity" />
+        <activity android:name=".ui.fragment.CashRegisterDelegate" />
     </application>
 </manifest>
