--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        multiDexEnabled true
+
         manifestPlaceholders = [
                 JPUSH_PKGNAME: applicationId
         ]
@@ -33,6 +35,9 @@ dependencies {
     implementation project(':goods')
     implementation project(':order')
     implementation project(':mine')
+    implementation project(':message')
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 //    implementation project(':message')
 //    implementation project(':goods')
