--- a/core/build.gradle
+++ b/core/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     api "com.bigkoo:alertview:$alert_view_version"
     // 七牛云SDK
     api 'com.qiniu:qiniu-android-sdk:7.3.15'
+    // loading
+    api 'com.wang.avi:library:2.1.3'
+    // 二维码
+    api 'me.dm7.barcodescanner:zbar:1.9.13'
 
     // BottomNavigation底部导航栏
     api 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
