--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,11 @@ dependencies {
 //        api project(':user')
 //    }
 
+    // debug时启用LeakCanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 }
